--------------------------------------------------------------------------------
Changes for 1.9.10

New features:
..F....... [ZBXNEXT-903] redesign Configuration->Items (Eduard)
..F....... [ZBXNEXT-909] redesign Configuration->Discovery (Eduard)

Bug fixes:
..F....... [ZBX-4630] fixed "Trigger overview" screen. (Eduard)
.......PS. [ZBX-4628] fixed an "invalid number of fields" error when syncing configuration on proxy (Sasha)
A.F....... [ZBX-4593] fixed "Trigger info" type screen item resource validation (pavels)
A.F....... [ZBX-4599] fixed errors in building select queries in Event.get() (pavels)
..F....... [ZBX-1787] fixed gradient element rendering if the value exceeds the max Y scale value (pavels)
A.F....... [ZBX-4494] fixed some types of screen items not being returned by Screen.get() (pavels)
.......PS. [ZBX-4591] more secure substituting of macros in item keys and dynamic SNMP OIDs (Sasha)
..F....... [ZBX-4598] fixed audit error when saving triggers (pavels)
A.F....... [ZBX-4598] fixed templated trigger inheritance (pavels)
..F....... [ZBX-3373] fixed host interfaces filtering in items. (Eduard)
..F....... [ZBX-4110] fixed "ssh key" field and "password" field names in items. (Eduard)
..F....... [ZBX-3466] fixed creating new item without hostname. (Eduard)
..F....... [ZBX-1601] fixed clear history and trends of items for templates. (Eduard)
..F....... [ZBX-3330,ZBX-4280] fixed remembering of item filter parameters. (Eduard)
..F....... [ZBX-2662,ZBX-3304] fixed reset button style in filter. (Eduard)
..F....... [ZBX-2071] fixed IPMI sensors with trailing spaces in items. (Eduard)
..F....... [ZBX-2631] fixed flexible interval configuration in items. (Eduard)
..F....... [ZBX-4596] fixed trigger prototype deletion. (Eduard)
..F....... [ZBX-2515] set 15 minutes autologout as default for new users (Alexei)
..F....... [ZBX-4580] fixed trigger info pop up in the item configuration list (pavels)
