@@ -847,6 +847,7 @@ define('ZBX_MAX_PORT_NUMBER', 65535);
 // input fields
 define('ZBX_TEXTBOX_STANDARD_SIZE',		50);
 define('ZBX_TEXTBOX_SMALL_SIZE',		25);
+define('ZBX_TEXTBOX_FILTER_SIZE',		20);
 define('ZBX_TEXTAREA_STANDARD_WIDTH',	312);
 define('ZBX_TEXTAREA_BIG_WIDTH',		524);
 define('ZBX_TEXTAREA_STANDARD_ROWS',	7);
